--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BlackJack</title>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
+<!-- Landing Section -->
+    <section id="landing-section">
+        <h1 id="title">Welcome to BlackJack</h1>
+        <p>Test your luck and skill against the dealer</p>
+        <button id="startGame">Start</button>
+    </section>
 
+    <script src="assets/index.js"></script>
 </body>
 </html>
