--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-<!-- Landing Section -->
+    <!-- Landing Section -->
     <section id="landing-section">
         <h1 id="title">Welcome to BlackJack</h1>
         <p>Test your luck and skill against the dealer</p>
         <button id="startGame">Start</button>
+    </section>
+
+    <!-- Name Input Section   -->
+    <section id="name-section" style="display: none">
+        <h2>Enter Your Name</h2>
+        <label for="player-name" hidden>Name</label>
+        <input type="text" id="player-name" placeholder="Your Name">
+        <button type="submit" id="submit-name">Submit</button>
     </section>
 
     <script src="assets/index.js"></script>
