--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <button type="submit" id="submit-name">Submit</button>
     </section>
 
+    <!-- Game Section   -->
+    <section id="game-section" style="display: none">
+        <div id="display-game" class="display-game">
+            game section
+        </div>
+        <div id="display-buttons" class="display-buttons">
+            button section
+        </div>
+    </section>
+
     <script src="assets/index.js"></script>
 </body>
 </html>
