add player and dealer sections

--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
     <!-- Game Section   -->
     <section id="game-section" style="display: none">
         <div id="display-game" class="display-game">
-            game section
+            <section id="player-section">
+                <h2>Player's Cards</h2>
+                <div id="player-cards">
+                    <!-- Player's cards will appear here -->
+                </div>
+                <p id="player-sum-el">Sum: </p>
+            </section>
+
+            <section id="dealer-section">
+                <h2>Dealer's Cards</h2>
+                <div id="dealer-cards">
+                    <!-- Dealer's cards will appear here -->
+                </div>
+                <p id="dealer-sum-el">Sum: </p>
+            </section>
         </div>
         <div id="display-buttons" class="display-buttons">
             button section
