add buttons and button styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             </section>
         </div>
         <div id="display-buttons" class="display-buttons">
-            button section
+            <button id="newCard" >HIT</button>
+            <button id="stand" >STAND</button>
+<!--            <button id="doubleDown" style="display: none;">DOUBLE DOWN</button>-->
+<!--            <button id="surrender" style="display: none;">SURRENDER</button>-->
         </div>
     </section>
 
