functionality for surrender button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button id="newCard" >HIT</button>
             <button id="stand" >STAND</button>
 <!--            <button id="doubleDown" style="display: none;">DOUBLE DOWN</button>-->
-<!--            <button id="surrender" style="display: none;">SURRENDER</button>-->
+            <button id="surrender">SURRENDER</button>
         </div>
     </section>
 
