--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
             </section>
         </div>
         <div id="display-buttons" class="display-buttons">
-            <button id="newCard" >HIT</button>
-            <button id="stand" >STAND</button>
-<!--            <button id="doubleDown" style="display: none;">DOUBLE DOWN</button>-->
-            <button id="surrender">SURRENDER</button>
+            <section id="player-info-section">
+                <p id="message-el">Want to play a round?</p>
+                <p id="player-el"></p>
+            </section>
+            <section id="buttons-section">
+                <button id="newCard" >HIT</button>
+                <button id="stand" >STAND</button>
+    <!--            <button id="doubleDown" style="display: none;">DOUBLE DOWN</button>-->
+                <button id="surrender">SURRENDER</button>
+            </section>
         </div>
     </section>
 
