--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <p id="player-el"></p>
             </section>
             <section id="buttons-section">
-                <button id="newCard" >HIT</button>
-                <button id="stand" >STAND</button>
-    <!--            <button id="doubleDown" style="display: none;">DOUBLE DOWN</button>-->
+                <button id="newCard">HIT</button>
+                <button id="stand">STAND</button>
+                <button id="reset">START OVER</button>
                 <button id="surrender">SURRENDER</button>
             </section>
         </div>
