update game logic: move to separate function

--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
             </section>
         </div>
         <div id="display-buttons" class="display-buttons">
+
             <section id="player-info-section">
                 <p id="message-el">Want to play a round?</p>
                 <p id="player-el"></p>
+                <p id="turn"></p>
             </section>
+
             <section id="buttons-section">
+                <button id="anotherRound">Another Round</button>
                 <button id="newCard">HIT</button>
                 <button id="stand">STAND</button>
                 <button id="reset">START OVER</button>
