--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
     </section>
 
+    <!-- Compiled from TypeScript   -->
     <script src="assets/index.js"></script>
 </body>
 </html>
